--- a/index.html
+++ b/index.html
@@ -1,39 +1,11 @@
-<DOCTYPE html>
-<html>
-	<head>
-		<title>Hyperlink</title>
-	</head>
-		<a href="https://www.facebook.com/BillGates/" target="blank"> <img src="./images/31.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/zuck/" target="blank"> <img src="./images/32.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://en.wikipedia.org/wiki/Mukesh_Ambani" target="blank"> <img src="./images/33.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://twitter.com/elonmusk" target="blank"> <img src="./images/34.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://twitter.com/RNTata2000" target="blank"> <img src="./images/35.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/sundar.pichai" target="blank"> <img src="./images/36.jpg" alt="This is an image" width="110px" height="100"> </a>
-		<a href="https://www.facebook.com/aymansadiq10/" target="blank"> <img src="./images/37.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/munzereenshahid19/" target="blank"> <img src="./images/38.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/virat.kohli" target="blank"> <img src="./images/39.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/RohitSharmaOfficialPage" target="blank"> <img src="./images/40.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/Shakib.Al.Hasan/" target="blank"> <img src="./images/41.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/neymarjr" target="blank"> <img src="./images/42.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/leomessi" target="blank"> <img src="./images/43.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/Cristiano" target="blank"> <img src="./images/44.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/kylianmbappeofficiel" target="blank"> <img src="./images/45.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.linkedin.com/in/narendramodi" target="blank"> <img src="./images/46.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/joebiden" target="blank"> <img src="./images/47.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://en.wikipedia.org/wiki/Sheikh_Hasina" target="blank"> <img src="./images/48.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/DonaldTrump" target="blank"> <img src="./images/49.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://en.wikipedia.org/wiki/Kim_Jong_Un" target="blank"> <img src="./images/50.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://twitter.com/kremlinrussia" target="blank"> <img src="./images/51.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/barackobama" target="blank"> <img src="./images/52.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/IamSRK" target="blank"> <img src="./images/53.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/AlluArjun" target="blank"> <img src="./images/54.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/RashmikaMandanna" target="blank"> <img src="./images/55.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/amitabhbachchan" target="blank"> <img src="./images/56.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/ActorPrabhas" target="blank"> <img src="./images/57.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://en.wikipedia.org/wiki/Ranbir_Kapoor" target="blank"> <img src="./images/58.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://www.facebook.com/TheOfficialYash/" target="blank"> <img src="./images/59.jpg" alt="This is an image" width="100px" height="100"> </a>
-		<a href="https://en.wikipedia.org/wiki/Peter_Parker_(Marvel_Cinematic_Universe)" target="blank"> <img src="./images/60.jpg" alt="This is an image" width="100px" height="100"> </a>
-	
-	
-	</body>
-</html>	
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello World!</h1>
+</body>
+</html>
