--- a/index.html
+++ b/index.html
@@ -1,170 +1,57 @@
 <!DOCTYPE html>
 <html>
+	<head>	
+		<title>HTML form</title>
 	<head>
-		<title>table</title>
-	</head>
 	<body>
-		<table border="1px" width="100%">
-			<tr>
-				<th>name</th>
-				<th>Institute</th>
-				<th>Father's Name</th>
-				<th>Occupassion</th>
-				<th>Blood Group</th>
-				<th>mobile Number</th>
-				<th>Address</th>
-				<th>Signature</th>
-			</tr>
-			<tr align="center">
-				<td>Prottoy chakraborty</td>
-				<td>Islami Bank Institute of Technology</td>					
-				<td>Pranatosh Chakraborty</td>
-				<td>Manager</td>
-				<td>0<sup>+</sup></td>
-				<td>+8801323680574</td>
-				<td>Rajnagar</td>
-				<td><i>prottoy</i></td>
-			</tr>
-			<tr align="center">
-				<td>Tanjirul Islam Tahmid</td>
-				<td>Islami Bank Institute of Technology</td>					
-				<td>Kudrot Ullah </td>
-				<td> Expot Saudi Arabia</td>
-				<td>A<sup>+</sup></td>
-				<td>+88018********</td>
-				<td>Noagawn</td>
-				<td><i>Tahmid</i></td>
-			</tr>
-			<tr align="center">
-				<td>Borshonpriyo Das Dibyo</td>
-				<td>Islami Bank Institute of Technology</td>					
-				<td>Bhimol Das</td>
-				<td>Business Man</td>
-				<td>O<sup>+</sup></td>
-				<td>+88018********</i></td>
-				<td>Gulapganj</td>
-				<td><u>Dibyo</u></td>
-			</tr>
-			<tr align="center">
-				<td>Mohammad Mursalin</td>
-				<td>Islami Bank Institute of Technology</td>					
-				<td>Md.Aminul Islam</td>
-				<td>Business Man</td>
-				<td>B<sup>+</sup></td>
-				<td>+88018********</i></td>
-				<td>Noagawn</td>
-				<td><u>Mursalin</u></td>
-			</tr>
-			<tr align="center">
-				<td>Sakib Rahman Chowdhury</td>
-				<td>Islami Bank Institute of Technology</td>					
-				<td>Hifzur  Rahman Chowdhury </td>
-				<td>Business Man</td>
-				<td>A<sup>+</sup></td>
-				<td>+88013********</i></td>
-				<td>Gulapganj</td>
-				<td><strong>Sakib</strong></td>
-			</tr>
-			<tr align="center">
-				<td>Arif Ahmad Rimon</td>
-				<td>Islami Bank Institute of Technology</td>
-				<td>Faruk Ahmad</td>
-				<td>>Business Man</td>
-				<td>A<sup>+</sup></td>
-				<td>+88016********</i></td>
-				<td>Hetimganj</td>
-				<td><strong>Arif</strong></td>
-			</tr>
-			<tr align="center">
-				<td>Saif Al Suhan</td>
-				<td>Islami Bank Institute of Technology</td>
-				<td>Siddiqure Rahman</td>
-				<td>Shop Owner</td>
-				<td>AB<sup>-</sup></td>
-				<td>+88013********</i></td>
-				<td>Dargah Moholla</td>
-				<td><strong>Suhan</strong></td>
-			</tr>
-			<tr align="center">
-				<td>Mashudur Rahman</td>
-				<td>Islami Bank Institute of Technology</td>
-				<td>Nabob Solimullah</td>
-				<td>Physicist</td>
-				<td>O<sup>-</sup></td>
-				<td>+88017********</i></td>
-				<td>Kulaura</td>
-				<td><b>Mashud</b></td>
-			</tr>
-			<tr align="center">
-				<td>Tahfizur Rahman</td>
-				<td>Islami Bank Institute of Technology</td>
-				<td>Siraj ud-Daulah</td>
-				<td>Pilot</td>
-				<td>A<sup>+</sup></td>
-				<td>+88019********</i></td>
-				<td>Seikhghat</td>
-				<td><b>Tahfiz</b></td>
-			</tr>
-			<tr align="center">
-				<td>Mujaddid Mahmud Chowdhury</td>
-				<td>Islami Bank Institute of Technology</td>
-				<td>MD.Babul</td>
-				<td>Construction Warker</td>
-				<td>O<sup>+</sup></td>
-				<td>+88013********</i></td>
-				<td>Amborkhana</td>
-				<td><b>Mujaddid</b></td>
-			</tr>
-			<tr align="center">
-				<td>Humayra Jannat Ananna</td>			
-				<td>Islami Bank Institute of Technology</td>
-				<td>Shagor</td>
-				<td>Business Man</td>
-				<td>B<sup>+</sup></td>
-				<td>+88013********</i></td>
-				<td>Minikola</td>
-				<td><b>Humayra</b></td>
-			</tr>
-			<tr align="center">
-				<td>Puja paul</td>			
-				<td>Islami Bank Institute of Technology</td>
-				<td>Dilip paul</td>
-				<td>Business Man</td>
-				<td>AB<sup>+</sup></td>
-				<td>+88013********</i></td>
-				<td>Kushighat</td>
-				<td><b>puja</b></td>
-			</tr>
-			<tr align="center">
-				<td>Priotom Paul</td>			
-				<td>Murarichand Collage,Sylhet</td>
-				<td>Koruna Paul</td>
-				<td>Business Man</td>
-				<td>B<sup>+</sup></td>
-				<td>+88013********</i></td>
-				<td>Sunamganj</td>
-				<td><b>Priotom</b></td>
-			</tr>
-			<tr align="center">
-				<td>Debojit Kumar Deb</td>			
-				<td>Modon Mohon College,Sylhet</td>
-				<td>Bipresh kanti Deb</td>
-				<td>Business Man</td>
-				<td>O<sup>+</sup></td>
-				<td>+88018********</i></td>
-				<td>Sunamganj</td>
-				<td><b>Debojit</b></td>
-			</tr>
-			<tr align="center">
-				<td>Anik Dey</td>			
-				<td>Murarichand Collage,Sylhet</td>
-				<td>Arodindu Dey</td>
-				<td>Business Man</td>
-				<td>B<sup>+</sup></td>
-				<td>+88017********</i></td>
-				<td>Sylhet</td>
-				<td><b>Anik</b></td>
-			</tr>
-		</body>
+		<h1><mark>Admission form<mark><h1>
+		<form>
+		<legend>First Name</legend>
+			<input type="text" name="First Name" placeholder="Apner namer protom ongsho"required>
+		<legend>last Name</legend>
+			<input type="text" name="Last Name" placeholder="Apner namer shesh ongsho"required>
+		<legend>father name</legend>
+			<input type="text" name="father Name" placeholder="Apner baber name"required>
+		<legend>Mother name</legend>
+			<input type="text" name="mother Name" placeholder="Apner mayer name"required>
+		<legend>Date of Birth</legend>
+			<input type="date" name="dofb" required>
+		<legend>gender</legend>
+			<input type="radio" name="gender">male
+			<input type="radio" name="gender">female
+		<legend>Blood Group</legend>
+			<input type="radio" name="Blood Group">A+
+			<input type="radio" name="Blood Group">A-
+			<input type="radio" name="Blood Group">B+
+			<input type="radio" name="Blood Group">B-
+			<input type="radio" name="Blood Group">O+
+			<input type="radio" name="Blood Group">O-
+			<input type="radio" name="Blood Group">AB+
+			<input type="radio" name="Blood Group">AB-
+		<legend>Gmail</legend>
+			<input type="Gmail" name="Gmail" placeholder="Apner Gmail address" placeholder="prottoy@gmail.com"required>
+		<legend>Last Qualification</legend>
+			<input type="checkbox" name="Last Qualification">SSC
+			<input type="checkbox" name="Last Qualification">HSC
+			<input type="checkbox" name="Last Qualification">Honour's
+			<input type="checkbox" name="Last Qualification">Master's
+		<legend>Phone number</legend>
+			<input type="number" name="phnnbr"placeholder="01320000000"required>
+			<legend>Whatsapp number</legend>
+			<input type="number" name="wtpbr"placeholder="01850000000"required>
+		<legend>parent's number</legend>
+			<input type="number" name="pntnbr"placeholder="01320000000"required>
+		<legend>How do you about IT AID</legend>
+			<input type="radio" name="hdykaitaid"required>facebook
+			<input type="radio" name="hdykaitaid"required>Friend's
+			<input type="radio" name="hdykaitaid"required>About
+		<legend>Signature</legend>
+			<input type="text" name="Signature"required>
+		<br><br><br>
+				
+	<input type="submit">	
+	<input type="reset">	
+				
+	</form>
+	</body>
 </html>
-	
