--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>HTML form</title>
 	<head>
 	<body>
-		<h1><mark>Admission form<mark><h1>
+		<h1><mark>Admission form</mark></h1>
 		<form>
 		<legend>First Name</legend>
 			<input type="text" name="First Name" placeholder="Apner namer protom ongsho"required>
