--- a/index.html
+++ b/index.html
@@ -1,57 +1,53 @@
-<!DOCTYPE html>
-<html>
-	<head>	
-		<title>HTML form</title>
-	<head>
-	<body>
-		<h1><mark>Admission form</mark></h1>
-		<form>
-		<legend>First Name</legend>
-			<input type="text" name="First Name" placeholder="Apner namer protom ongsho"required>
-		<legend>last Name</legend>
-			<input type="text" name="Last Name" placeholder="Apner namer shesh ongsho"required>
-		<legend>father name</legend>
-			<input type="text" name="father Name" placeholder="Apner baber name"required>
-		<legend>Mother name</legend>
-			<input type="text" name="mother Name" placeholder="Apner mayer name"required>
-		<legend>Date of Birth</legend>
-			<input type="date" name="dofb" required>
-		<legend>gender</legend>
-			<input type="radio" name="gender">male
-			<input type="radio" name="gender">female
-		<legend>Blood Group</legend>
-			<input type="radio" name="Blood Group">A+
-			<input type="radio" name="Blood Group">A-
-			<input type="radio" name="Blood Group">B+
-			<input type="radio" name="Blood Group">B-
-			<input type="radio" name="Blood Group">O+
-			<input type="radio" name="Blood Group">O-
-			<input type="radio" name="Blood Group">AB+
-			<input type="radio" name="Blood Group">AB-
-		<legend>Gmail</legend>
-			<input type="Gmail" name="Gmail" placeholder="Apner Gmail address" placeholder="prottoy@gmail.com"required>
-		<legend>Last Qualification</legend>
-			<input type="checkbox" name="Last Qualification">SSC
-			<input type="checkbox" name="Last Qualification">HSC
-			<input type="checkbox" name="Last Qualification">Honour's
-			<input type="checkbox" name="Last Qualification">Master's
-		<legend>Phone number</legend>
-			<input type="number" name="phnnbr"placeholder="01320000000"required>
-			<legend>Whatsapp number</legend>
-			<input type="number" name="wtpbr"placeholder="01850000000"required>
-		<legend>parent's number</legend>
-			<input type="number" name="pntnbr"placeholder="01320000000"required>
-		<legend>How do you about IT AID</legend>
-			<input type="radio" name="hdykaitaid"required>facebook
-			<input type="radio" name="hdykaitaid"required>Friend's
-			<input type="radio" name="hdykaitaid"required>About
-		<legend>Signature</legend>
-			<input type="text" name="Signature"required>
-		<br><br><br>
-				
-	<input type="submit">	
-	<input type="reset">	
-				
-	</form>
-	</body>
-</html>
+<DOCTYPE html>
+	<html>
+		<head>
+			<title>Home</title>
+		</head>
+		<body>
+			<div class="nav bar">
+			<h1 align="center"><i>UmeshChandra NimalaBala Students Hostel <i></h1>
+				<br><br>
+			<h1 align="center">		
+				<a href="home.html">home</a>
+				<a href="gallery.html">gallery</a>
+				<a href="schedule.html">schedule</a>
+				<a href="contact.html">contact</a>
+		</h1>
+		<h1 align="center"><mark>উমেশচন্দ্র-নির্মলাবালা ছাত্রাবাসের ‘নিকুঞ্জ-সুহাসিনী ভবন</mark></h1>
+		<p align="justify">ভারত-বাংলাদেশের সম্পর্ক সত্যি রক্তের মাধ্যমেই সুপ্রতিষ্ঠিত। এক সাগর রক্তের বিনিময়ে অর্জিত আমাদের মুক্তির লড়াইয়ে বন্ধুপ্রতিম প্রতিবেশী ভারতে রয়েছে অপরিসীম অবদান, যা চিরস্মরণীয়। মুক্তিযুদ্ধে ভারতের ভূমিকা কোনো কিছুর বিনিময়েই পরিমাপযোগ্য নয়। 
+
+১৯৭১ সালে ভারত যদি আমাদের পাশে শক্তভাবে আন্তরিকতার সঙ্গে না দাঁড়াতো, তবে এত দ্রুত স্বাধীনতা অর্জন নাও হতে পারতো।একটি দেশের স্বার্বভৌমত্ব ও স্বাধীনতার লক্ষ্যে অন্য আরেকটি দেশ তাদের সৈন্য পাঠিয়ে সরাসরি যুদ্ধে অংশগ্রহণ বিরল ঘটনা। যা ভারত আমাদের জন্য পাকিস্তানের বিপক্ষে করেছে। মুক্তিযুদ্ধে ১ কোটি শরণার্থীকে আশ্রয়, খাবার প্রদান, মুক্তিযোদ্ধাদের প্রশিক্ষণ ও অস্ত্র তথ্য সরবারহ এবং সারা বিশ্বে বাংলাদেশের পক্ষে সমর্থন আদায়ের মধ্য দিয়ে আমাদেরকে ঋণি করেছে ভারত। স্বাধীনতার পরবর্তী সময়ে জাতির পিতা বঙ্গবন্ধু শেখ মুজিবুর রহমানের সরকার এবং বর্তমান প্রধানমন্ত্রী শেখ হাসিনা সরকারের প্রতি ভারতের রয়েছে সমর্থন ও সহযোগিতা।
+যা আমাদের বিভিন্ন ক্ষেত্রে উন্নতি-সমৃদ্ধি অর্জনের পরিপূরক।
+এরই ধারাবাহিকতায় সিলেটের চালিবন্দরের উমেশচন্দ্র-নির্মলাবালা হিন্দু ছাত্রাবাসে ভারত সরকারের অর্থায়নে নির্মাণ করা হয়েছে পাঁচতলা বিশিষ্ট একটি ছাত্রীনিবাস। ২০১৯ সালের ২ সেপ্টেম্বর ছাত্রীনিবাসটি নির্মাণের লক্ষ্যে সিলেটস্থ ভারতীয় সহকারী হাইকমিশন অফিসে সহকারী হাইকমিশনার ও ছাত্রাবাস কর্তৃপক্ষের মধ্যে সমঝোতা সম্পন্ন হয়। ৫১০০ বর্গফুট জায়গার ওপর নির্মিত পাঁচতলা ভবন নির্মাণে ভারত সরকারের ব্যয় হয়েছে ৪ কোটি ৩৫ লাখ ২৪ হাজার দুই শ ষাট টাকা।
+যা আমাদের বিভিন্ন ক্ষেত্রে উন্নতি-সমৃদ্ধি অর্জনের পরিপূরক।
+এরই ধারাবাহিকতায় সিলেটের চালিবন্দরের উমেশচন্দ্র-নির্মলাবালা হিন্দু ছাত্রাবাসে ভারত সরকারের অর্থায়নে নির্মাণ করা হয়েছে পাঁচতলা বিশিষ্ট একটি ছাত্রীনিবাস। ২০১৯ সালের ২ সেপ্টেম্বর ছাত্রীনিবাসটি নির্মাণের লক্ষ্যে সিলেটস্থ ভারতীয় সহকারী হাইকমিশন অফিসে সহকারী হাইকমিশনার ও ছাত্রাবাস কর্তৃপক্ষের মধ্যে সমঝোতা সম্পন্ন হয়। ৫১০০ বর্গফুট জায়গার ওপর নির্মিত পাঁচতলা ভবন নির্মাণে ভারত সরকারের ব্যয় হয়েছে ৪ কোটি ৩৫ লাখ ২৪ হাজার দুই শ ষাট টাকা।
+
+২০২২ সালের ১১ জুন নবনির্মিত ছাত্রীনিবাসটির উদ্বোধন করেন বাংলাদেশে নিযুক্ত তৎকালীন ভারতীয় হাইকমিশনার শ্রী বিক্রম কুমার দোরাইস্বামী
+অনুষ্ঠানে হাই কমিশনারের ঘোষণা অনুযায়ী আসবাবপত্র ক্রয়ের জন্য পরবর্তীতে আরো ৬৩ লাখ ২৪ হাজার ৭ শ বিশ টাকা বরাদ্দ দেওয়া হয়। বর্তমান ভারতীয় হাইকমিশনার শ্রী প্রণয় কুমার ভার্মা ২০২২ সালের ১৪ ডিসেম্বর ছাত্রাবাস পরিদর্শন করেন। ছাত্রাবাস ব্যবস্থাপনা কমিটির সভায় নবনির্মিত এ ভবনের নামকরণ করা হয়েছে ‘নিকুঞ্জ-সুহাসিনী ভবন’। এ ভবন নির্মাণের আগে এখানে সিট সংখ্যা ছিল ৬০টি।
+
+১৯৬২ সালে নিকুঞ্জ বিহারী গোস্বামী এ ছাত্রাবাসটি প্রতিষ্ঠা করেন।
+
+তিনি ছিলেন ব্রিটিশ বিরোধী স্বাধীনতা সংগ্রামী, বিশিষ্ট সাংবাদিক ও সমাজ সংস্কারক। তিনি ছাত্রাবাসটি প্রতিষ্ঠার পর থেকে ১৯৯৩ খ্রিস্টাব্দের ২৯ আগস্ট মৃত্যুবরণের আগ পর্যন্ত পরিচালনা করে গেছেন। গোস্বামীজীর মৃত্যুর পর আরেক মহীয়সী নারী সুহাসিনী দাস ছাত্রাবাস পরিচালনার দায়িত্ব নেন। তিনিও ব্রিটিশ বিরোধী আন্দোলনের নেত্রী এবং আমৃত্যু সমাজসেবী। সুহাসিনী দাস ১৯৯৯ সালে প্রধানমন্ত্রী শেখ হাসিনার নিকট থেকে সমাজসেবায় রাষ্ট্রীয় পদক এবং ১৯৯৬ সালে বেগম রোকেয়া পদক গ্রহণ করেন। ২০০৯ সালের ৩০ মে তিনি পরলোকগমনের পর একটি ব্যবস্থাপনা কমিটির মাধ্যমে ছাত্রাবাসটি পরিচালিত হচ্ছে।
+ছাত্রাবাস পরিচালনা কমিটির সাধারণ সম্পাদক ও সিলেটের মইনউদ্দিন আদর্শ মহিলা কলেজের উপাধ্যক্ষ কৃষ্ণপদ সূত্রধর বলেন, নতুন ভবনে ১৬০ জন ছাত্রী এবং আলাদা ভবনে ৪০ জন ছাত্র থাকেন। তারা সিলেটে অবস্থিত বিভিন্ন কলেজ, বিশ্ববিদ্যালয়, নার্সিং ও পলিটেকনিক ইন্সটিটিউটে উচ্চ মাধ্যমিক, ডিগ্রী পাস ও অনার্স, মাস্টার্স এবং নার্সিং কোর্সে পড়ালেখা করেন। শুধু উচ্চ মাধ্যমিকে অধ্যয়নরত ছাত্ররা এখানে থাকতে পারেন। 
+
+ছাত্র-ছাত্রীদের শতকরা ৯৯ ভাগ সিলেট বিভাগের চার জেলা সিলেট, মৌলভীবাজার, হবিগঞ্জ ও সুনামগঞ্জের প্রত্যন্ত এলাকার বাসিন্দা। জনপ্রতি মাসে ৩৫০০ টাকা নেওয়া হয়। পাঁচতলা ছাত্রী ভবন তৈরির আগে সিট না থাকার কারণে আমরা অনেককে ফিরিয়ে দিতাম। আগে পুরনো অবকাঠামো এবং নিরাপত্তা সংক্রান্ত নানা অসুবিধা ছিল।
+
+সিলেটের মুরারিচাঁদ কলেজে পদার্থ বিজ্ঞানে মাস্টার্সে অধ্যয়নরত কংকন আচার্য বলেন সিলেট শহর থেকে প্রায় ৭৬ কিলোমিটার দূরে আমার বাড়ি মৌলভীবাজারের কমলগঞ্জে যেতে ৩ ঘণ্টা সময় লাগে। তাই আমি ২০১৬ সাল থেকে এ ছাত্রাবাসে থেকেই পড়ছি। এখানে থাকা-খাওয়া ও নিরাপত্তাসহ সব সুযোগ-সুবিধা রয়েছে।
+
+একই কলেজে পড়ুয়া গণিত বিভাগের অনার্সের ছাত্রী শ্রাবন্তী রায় সূচী বলেন, এখানে স্বল্প খরচে থাকা-খাওয়া যায়। পরিবেশ খুব ভালো। ছাত্রাবাসের মন্দিরে ছাত্র-ছাত্রীদের সকাল-সন্ধ্যা প্রার্থনা করানো হয়। সপ্তাহের প্রতি সোমবার গীতা ক্লাস হয়। ইচ্ছে করলেই ছাত্রীনিবাসে সিট পাওয়া যায় না। এখানে থাকতে পেরে আমি নিজেকে ধন্য মনে করছি।
+
+সরকারি মডেল স্কুল এন্ড কলেজের একাদশ শ্রেণির ছাত্র প্রিয়তম পাল বলেন, সিলেট শহরের বাইরের হিন্দু ছাত্র-ছাত্রীদের জন্য এ ছাত্রাবাসটির অবদান বলে শেষ করা যাবে না। ভারতের অর্থায়নে নতুন ভবন নির্মাণের ফলে অনেকে থাকার সুযোগ পান। এটা না হলে অসংখ্য ছাত্রীকে দূর থেকে এসে বেকায়দায় পড়তে হতো।
+
+ব্যবস্থাপনা কমিটির সভাপতি প্রকৌশলী মনোজবিকাশ দেবরায় বলেন, ভারত সরকার ও হাইকমিশনের প্রতি আমরা চির কৃতজ্ঞ। সিলেটের প্রত্যন্ত অঞ্চলের হিন্দু ছেলেমেয়েরা এখানে থেকে নিশ্চিন্তে লেখাপড়া করতে পারছেন। আসনের তুলনায় আমাদের চাহিদা অনেক বেশি। এ ছাত্রাবাসে থেকে লেখাপড়া করে বহু ছাত্র-ছাত্রী কর্মজীবনে দেশের গুরুত্বপূর্ণ দায়িত্ব পালন করছেন। 
+
+সিলেট হবিগঞ্জ সংরক্ষিত আসনের সাবেক নারী এমপি আমাতুল কিবরিয়া কেয়া চৌধুরী বলেন, ছাত্রাবাসটি একটি বিশেষ ব্রত নিয়ে কাজ করে। আগে সিলেটে দূরদুরান্তের ছাত্রীদের থাকার সংকট ছিল। বিশেষ করে অসচ্ছল পরিবারের মেয়েদের। ভারত সরকারের এ মহান উদ্যোগটি অত্যন্ত প্রশংসনীয়।
+
+বাংলাদেশ পুলিশের অতিরিক্ত আইজি শ্রী দেবদাস ভট্টাচার্য্য বিপিএম বলেন, আমি এ ছাত্রাবাসের একজন ছাত্র ছিলাম। উমেশচন্দ্র-নির্মলাবালা ছাত্রাবাসের সুনাম ও ঐতিহ্য রয়েছে। সিলেটে নিযুক্ত ভারতীয় সহকারী হাইকমিশনার শ্রী নিরাজ কুমার জয়সওয়ালের আন্তরিক প্রচেষ্টায় ভারত সরকারের অর্থায়নে নতুন ভবনটি নির্মাণ হয়। ফলে এখানকার ছাত্রীদের ভীষণ উপকার হয়েছে। এজন্য ভারত সরকারকে অসংখ্য ধন্যবাদ জানাই। আশা করি ভবিষ্যতেও তাদের এ মানবিক কার্যক্রম চলমান থাকবে। সেইসঙ্গে ছাত্রাবাস পরিচালনা কমিটির সদস্যদের অলাভজনক কর্মকে সাধুবাদ জানাচ্ছি।
+
+সিলেটে নিযুক্ত ভারতীয় সহকারী হাইকমিশনার নিরাজ কুমার জয়সওয়াল বলেন, ছাত্রাবাসের পুরনো ঘরে শিক্ষার্থীদের জায়গা সংকুলান হতো না। ফলে অনেক অসুবিধা পোহাতে হতো। এখন দূর-দুরান্ত থেকে আসা ছাত্রীরা এখানে বাড়ির পরিবেশে থেকে লেখাপড়া করার সুযোগ পাচ্ছেন। উচ্চ শিক্ষা নিয়ে তারা মানবসেবায় অবদান রাখবেন এ প্রত্যাশা করছি।
+
+</p>
+		</div>
+		</body>
+	
+	</html>
