--- a/schedule.html
+++ b/schedule.html
@@ -1,38 +1,34 @@
-<DOCTYPE html>
-	<html>
-		<head>
-			<title>schedule</title>
-		</head>
-		<body>
-			<div class="nav bar">
-			<h1 align="center"><i>UmeshChandra NimalaBala Students Hostel <i></h1>
-				<br><br>
-			<h1 align="center">		
-				<a href="home.html">home</a>
-				<a href="gallery.html">gallery</a>
-				<a href="schedule.html">schedule</a>
-				<a href="contact.html">contact</a>
-		</h1>
-			<table border="1px" width="100%">
-			<tr>
-				<th>Sunday</th>
-				<th>Monday</th>
-				<th>Tuesday</th>
-				<th>Wednesday</th>
-				<th>Thursday</th>
-				<th>Friday</th>
-				<th>Saturday</th>
-				
-			</tr>
-			<tr align="cener"></td>
-				<td>06 pm-10pm</td>					
-				<td>05 pm-11pm</td>
-				<td>07 pm-09pm</td>
-				<td>06 pm-11pm</td>
-				<td>05 pm-10pm</td>
-				<td>10 am-12pm</td>
-				<td>09 am-11pm</td>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Facebook</title>
+	<link rel="stylesheet" href="Facebook.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
+	<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png">
+</head>
+<body>
+	<div class="main">
+		<div class="logo">
+		<img src="https://static.xx.fbcdn.net/rsrc.php/y1/r/4lCu2zih0ca.svg" alt="facebook">
+		<h2>Facebook helps you connect and share with the people in your life.</h2>
 		</div>
-		</body>
+		<div class="form">
+			<form>
+				<input type="text" placeholder="Email address or phone number" class="input">
+				<input type="password" placeholder="Password" class="input">
+				<input type="submit" value="Log in" class="login"> 
+			</form>
+			
+			<a href="" class="forgot-password">Forgotten password?</a>
+			<div class="line"></div>
+			<a href="" class="new-account">Create new account</a>
+			<p><a href="">Create a page</a> for celebrity, brand or business.</p>
+		</div>
+	</div>
 	
-	</html>
+</body>
+</html>
